[package]
name = "solana_favorite"
version = "0.1.0"
edition = "2024"
description = "Created with Anchor"

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]

anchor-lang = "0.31.1"
